Prevent zoom flickering on hover

--- a/app/assets/stylesheets/gobierto_budgets/carto_infowindow.scss
+++ b/app/assets/stylesheets/gobierto_budgets/carto_infowindow.scss
@@ -110,7 +110,7 @@
 
 body div.cartodb-legend-stack {
   border: none; 
-  webkit-box-shadow: initial;
+  -webkit-box-shadow: initial;
   -moz-box-shadow: initial;
   box-shadow: initial;
   position: absolute;
