--- a/app/assets/stylesheets/gobierto_budgets/map_page.scss
+++ b/app/assets/stylesheets/gobierto_budgets/map_page.scss
@@ -4,6 +4,9 @@
   height: 300px;
   width: 100%
 }
+.cartodb-zoom a {
+  transition: none;
+}
 
 // Move zoom control buttons
 .cartodb-map-wrapper .cartodb-zoom {
